ESQL: Fix `isPartial` flag handling (#157475)
(cherry picked from commit 5e8c690dceca6e246cfec97a6060d498dab6ed1c)