@@ -161,14 +161,13 @@ public class CrossClusterQueryWithPartialResultsIT extends AbstractCrossClusterT
         try (var resp = runQuery(request)) {
             logger.info("--> response {}", resp);
             assertTrue(resp.isPartial());
-            Set<String> allIds = Stream.of(local.okIds, remote1.okIds).flatMap(Collection::stream).collect(Collectors.toSet());
+            Set<String> allIds = Sets.union(local.okIds, remote1.okIds);
             List<List<Object>> rows = getValuesList(resp);
             assertThat(rows.size(), equalTo(allIds.size()));
             Set<String> returnedIds = new HashSet<>();
             for (List<Object> row : rows) {
                 assertThat(row.size(), equalTo(2));
-                String id = (String) row.get(0);
-                assertTrue(returnedIds.add(id));
+                assertTrue(returnedIds.add((String) row.getFirst()));
             }
             assertThat(returnedIds, equalTo(allIds));
             assertClusterSuccess(resp, LOCAL_CLUSTER, local.okShards);
